--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+ 🎲 @umeshsonii 🎲 
   </footer>
   <script src="index.js" type="text/javascript">
 
